fix aside img alignment

--- a/app/_components/aside-img.module.css
+++ b/app/_components/aside-img.module.css
@@ -1,7 +1,7 @@
 .img_container {
   width: 16rem;
   height: 18rem;
-  align-self: flex-start;
+  align-self: center;
 }
 
 .img {
@@ -18,6 +18,7 @@
     width: 45%;
     height: unset;
     display: flex;
+    align-self: unset;
     justify-content: center;
   }
 
